--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h5>Первый сайт git</h5>
+    <h5>Первый сайт git 2</h5>
     <h1>Hello world!</h1>
     <p>Как тебе такое, Илон Маск?</p>
     <h2>Мой первый маркированный список</h2>
